<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/headingtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/menutopbarbg"
        android:gravity="center"
        android:text="@string/config_headingtxt_text"
        android:textColor="@color/headingtxt_textcolor"
        android:textSize="@dimen/headingtxt_textsize"
        android:textStyle="bold" />
    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/headingtxt"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/subbg" >
        <LinearLayout
            android:id="@+id/versionlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            android:weightSum="3" >
            <TextView
                android:id="@+id/versionlbltxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/versionlbltxt_text"
                android:textSize="@dimen/configtxt_textsize" />
            <TextView
                android:id="@+id/txt1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text=":"
                android:textSize="@dimen/configtxt_textsize" />
            <TextView
                android:id="@+id/versiontxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/configtxt_textsize" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/versionlayout"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3" >
            <TextView
                android:id="@+id/timeoutlbltxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/timeoutlbltxt_text"
                android:textSize="@dimen/configtxt_textsize" />
            <TextView
                android:id="@+id/txt2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text=":"
                android:textSize="@dimen/configtxt_textsize" />
            <TextView
                android:id="@+id/timeouttxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/configtxt_textsize" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/footerbg" >

        <Button
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/backbtn"
            android:text="" />
    </RelativeLayout>
</RelativeLayout>